crates/openrouter-macros/tests/ui/capability__unknown_name.stderr
error: unknown OpenRouter capability `param::toolz`; did you mean `param::tools`?
 --> tests/ui/capability__unknown_name.rs:3:64
  |
3 | const MODEL: &str = model_supports!("qwen/qwen3.7-max", param::toolz);
  |                                                                ^^^^^
